# miol

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/miol-cli/: Cargo.toml
crates/miol-cli/src/: main.rs
crates/miol-core/: Cargo.toml
crates/miol-core/src/: lib.rs
crates/miol-macros/: Cargo.toml
crates/miol-macros/src/: lib.rs
crates/miol-macros/tests/: smoke.rs
crates/orv-analyzer/: Cargo.toml
crates/orv-analyzer/src/: analysis.rs  lib.rs  lower.rs  tests.rs  types.rs  validate.rs
crates/orv-cli/: Cargo.toml
crates/orv-cli/src/: args.rs  build_deploy.rs  client_loader_template.js  db.rs  deploy_benchmark.rs  editor_lsp_dap.rs  graph_view.rs  init.rs  main.rs  orv_test.rs  tests.rs
crates/orv-cli/src/build_deploy/: client_wasm_codec.rs
crates/orv-cli/tests/: cli_e2e.rs  dap_async_transport.rs  db_data_migration.rs
crates/orv-compiler/: Cargo.toml
crates/orv-compiler/src/: artifacts.rs  lib.rs  native.rs  pipeline.rs  server_artifacts.rs  tests.rs
crates/orv-core/: Cargo.toml
crates/orv-core/src/: lib.rs  source.rs
crates/orv-core/tests/: fixture_harness.rs
crates/orv-diagnostics/: Cargo.toml
crates/orv-diagnostics/src/: diagnostic.rs  lib.rs  span.rs
crates/orv-hir/: Cargo.toml
crates/orv-hir/src/: dump.rs  hir.rs  lib.rs
crates/orv-ids/: Cargo.toml
crates/orv-ids/src/: lib.rs
crates/orv-macros/src/: lib.rs
crates/orv-macros/tests/: smoke.rs
crates/orv-project/: Cargo.toml
crates/orv-project/src/: lib.rs
crates/orv-resolve/: Cargo.toml
crates/orv-resolve/src/: lib.rs  resolver.rs  scope.rs
crates/orv-runtime/: Cargo.toml
crates/orv-runtime/src/: db.rs  interp.rs  lib.rs  server.rs
crates/orv-syntax/: Cargo.toml
crates/orv-syntax/src/: ast.rs  cursor.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/orv-syntax/tests/: lex_fixtures.rs  lexer_fixtures.rs  parser_fixtures.rs
docs/: AI_FEATURES.md  ARCHITECTURE.md  BENCHMARK_SHOP_5H.md  CHANGELOG.md  DOCUMENTATION.md  IMPLEMENTATION_GAP_REPORT.md  IMPLEMENTATION_MATRIX.md  IMPLEMENTATION_STATUS.md  MVP.md  OPERATIONAL_SURFACES.md  README.md  ROADMAP.md  SECURITY_MODEL.md  SPEC.md
docs/specs/: 2026-04-08-orvdb-brainstorm-notes.md
docs/superpowers/plans/: 2026-04-29-language-domain-completion.md
docs/usernote/: main.md  syntax.md
fixtures/: default-syntax.orv  default.md
fixtures/e2e/: catchall.orv  domains.orv  hello.orv  path_param.orv  shopping_mall.orv
fixtures/lexer/: operators.orv  string-interp.orv
fixtures/plan/: 01-basics.orv  02-types.orv  03-domains.orv  04-server.orv  04-web.orv  05-optimization.orv  05-server.orv  06-fullstack-showcase.orv  06-optimization.orv  07-fullstack-showcase.orv  08-superapp-simulation.orv  09-shopping-mall.orv  shared_models.orv
fixtures/plan/models/: post.orv  user.orv
fixtures/plan/utils/: format.orv
fixtures/project-e2e/: .gitignore
fixtures/project-e2e/src/: main.orv
fixtures/project-e2e/src/lib/: db.orv
fixtures/project-e2e/src/middlewares/: ratelimit.orv
fixtures/project-e2e/src/routes/: health.orv
fixtures/project-e2e/src/routes/user/: delete.orv  index.orv  list.orv
tree-sitter-orv/: README.md  grammar.js  package.json
tree-sitter-orv/queries/: highlights.scm  locals.scm
tree-sitter-orv/test/: grammar-smoke.cjs
