[package]
name = "miol-core"
description = "Core library for the Miol DSL"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
miol-macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
