[package]
name = "orv-compiler"
description = "Frontend compilation pipeline for the orv language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orv-diagnostics = { workspace = true }
orv-hir = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
orv-analyzer = { workspace = true }
orv-resolve = { workspace = true }
orv-syntax = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
