[package]
name = "orv-runtime"
description = "Reference runtime and direct adapter build support for orv"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orv-diagnostics = { workspace = true }
orv-hir = { workspace = true }
orv-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
orv-analyzer = { workspace = true }
orv-resolve = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
