[package]
name = "orv-runtime"
description = "Reference runtime and direct adapter build support for orv"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orv-diagnostics = { workspace = true }
orv-hir = { workspace = true }
orv-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# @server HTTP 런타임 (C5b) — MVP 는 HTTP/1.1. SPEC §11 의 QUIC/HTTP3
# 기본값은 이후 마일스톤에서 합류한다.
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "signal"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
orv-analyzer = { workspace = true }
orv-resolve = { workspace = true }
pretty_assertions = { workspace = true }
# 통합 테스트용 HTTP 클라이언트 + 러너.
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http1"] }

[lints]
workspace = true
